<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgendaActivity">

    <TextView
        android:id="@+id/tvNuevoContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Contacto"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:text="@string/Nombre"
        android:textAlignment="viewStart"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Apellidos"
        android:inputType="textPersonName"
        android:text="@string/Apellidos"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Telefono"
        android:inputType="phone"
        android:text="@string/Telefono"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/campo_notas"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Notas"
        android:inputType="textMultiLine"
        android:text="@string/Notas" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Aceptar" />

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancelar" />
    </LinearLayout>
</LinearLayout>